# mimetype

./: Cargo.toml  README.md
src/: lib.rs  mime.rs  tree.rs
src/magic/: archive.rs  audio.rs  base.rs  binary.rs  ftyp.rs  image.rs  mod.rs  text.rs
