[package]
name = "mimetype"
version = "0.1.4"
edition = "2021"
description = "detech mime type from file bytes"
license = "Apache-2.0"
repository = "https://github.com/hoslo/mimetype"

[dependencies]
parking_lot = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.36.1"
byteorder = "1"
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = ["sync"]
sync = []
async = ["dep:tokio"]
